# LowLevelEngine

./: .gitignore  .gitmodules  CMakeLists.txt
src/containers/: containers.txt
src/containers/io/: fileio.cpp  fileio.h
src/containers/memory/: DoubleBufferedAllocator.cpp  DoubleBufferedAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.cpp  StackAllocator.h  allocate.cpp  allocate.h
src/containers/pattern/: Singleton.h
src/containers/string/: CStringTable.h
src/debugging/: Logger.cpp  Logger.h  assertions.cpp  assertions.h  debuging.txt  logging.h  termcol.h
src/foundations/: foundations.txt
src/frontend/: frontend.txt
src/game/: Engine.cpp  Engine.h  FrameGoverner.cpp  FrameGoverner.h  game.txt  main.cpp
src/hid/: hid.txt
src/physics/: physics.txt
src/renderer/: renderer.txt
src/renderer/opengl/: GLShaders.cpp  GLShaders.h  OpenGLShader.cpp  OpenGLShader.h
src/resources/: Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h  resources.txt
src/visual/: visualeffects.txt
test/containers/io/: fileio.cpp
test/containers/memory/: DoubleBufferedAllocator.cpp  PoolAllocator.cpp  StackAllocator.cpp
test/containers/string/: CStringTable.cpp
test/debugging/: logging.cpp
test/resources/: Resource.cpp
